white space fixed for mobile

--- a/src/style.css
+++ b/src/style.css
@@ -500,6 +500,7 @@ h3 {
 
   .myphoto {
     width: 100%;
+    padding: 0;
   }
 
   .portfolio{
